mejoras en el diseño

--- a/styles/global.css
+++ b/styles/global.css
@@ -214,3 +214,9 @@ tamaño-img{
 
 }
 
+.section-hero {
+  background-image: url('/public/image1.1.png');
+  background-size: cover;
+  background-position: center;
+}
+
